--- a/images/style.css
+++ b/images/style.css
@@ -305,7 +305,7 @@ padding: 4px 15px;border-left: 1px solid rgba(255,255,255,0.65);font-size: 13px;
 	  ==============================================================
 */
 .gt_hdg_1{text-align: center;margin: 0px 0px 30px;}
-.gt_hdg_1 h3{font-weight: bold;text-transform: uppercase;margin: 0px 0px 10px;}
+.gt_hdg_1 h3{font-weight: bold;text-transform: uppercase;margin: 0px 0px 10px; color: rgb(15, 59, 95);}
 .gt_hdg_1 p{margin: 0px 0px 15px;}
 .gt_hdg_1 span{display: inline-block;position: relative;}
 .gt_hdg_1 span.gt_hdg_left:before{content: "";position: absolute;width: 110px;height: 1px;background-color: #999999;left: -120px;top: -10px;}
@@ -1165,7 +1165,7 @@ ul.countdown li p {text-transform:capitalize;font-weight:600;color:#6c6c6c;margi
 .get_started_outer_wrap{float:left;width:100%;position:relative;border-bottom:1px solid #f2f2f2;padding:0px 0px 50px;margin:0px 0px 50px;}
 .get_started_outer_wrap:before{content:"";position:absolute;bottom:4px;left:0px;right:0px;border-bottom:1px solid #f2f2f2;}
 .get_started_content_wrap{float:left;width:100%;position:relative;}
-.get_started_content_wrap h3{margin:0px 0px 15px;text-transform:uppercase;font-weight: bold;color: rgb(175,39,36);}
+.get_started_content_wrap h3{margin:0px 0px 15px;text-transform:uppercase;font-weight: bold;color: rgb(15, 59, 95);}
 .get_started_video{float:left;width:100%;position:relative;}
 .get_started_video:before{content:"";position:absolute;top:0px;left:0px;width:100%;height:100%;background-color:rgba(0,0,0,0.5);}
 .get_started_video img{width:100%;height:auto;}
